2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2_private.h: Implement TPI mode for AVRISPmkII/STK600
	* config_gram.y: (Dito.)
	* avrpart.h: (Dito.)
	* stk500v2.c: (Dito.)
	* main.c: (Dito.)
	* lexer.l: (Dito.)
	* avrdude.conf.in: Add ATtiny4/5/9/10
	* avrdude.1: Document TPI and new device support.
	* doc/avrdude.texi: (Dito.)

2010-01-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by clint fisher:
	patch #7038: Adding Atmega32U4 Device to avrdude.conf.in
	* avrdude.conf.in (atmega32u4): New device.
	* avrdude.1: Document the new device support.
	* doc/avrdude.texi: (Dito.)

2010-01-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Thomas Pircher:
	patch #6927: Documentation patches
	* doc/avrdude.texi: Fix various typos, and remove the last
	remnants of obsoleted options -i/-o/-m/-f.
	* avrdude.1: Merge typo fixes from avrdude.texi where
	applicable.

2010-01-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.1: Update documentation to match the reality (device
	support, memory areas).
	* doc/avrdude.texi: Update documentation to match the
	reality (device support, programmer support, memory areas).
	Merge buspirate-specific comments from avrdude.1.
	* jtagmkII.c: Add some firmware feature checks.

2010-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Implement PDI mode support for the JTAG ICE mkII
	and the AVR Dragon.
	* jtagmkII.h: (Dito.)
	* config_gram.y: (Dito.)
	* jtagmkII_private.h: (Dito.)
	* avrdude.conf.in: (Dito.)
	* lexer.l: (Dito.)

2010-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Update STK600 routing and socket card data from XML
	file.

2010-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Cleanup the open/close handling to avoid accessing
	unallocated memory (in the atexit handler) in case of bailing out.
	* main.c: (Ditto.)

2010-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Stylistic changes: move #defines out into